# cfmm2tar

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dcm4cheUtils.py  DicomSorter.py  Dockerfile  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  SERIES_METADATA_USAGE.md  Singularity  Singularity.v0.0.1c  Singularity.v0.0.1f  Singularity.v0.0.1g  Singularity.v0.0.1h  Singularity.v0.0.1i  cfmm2tar  cfmm2tar.sh  coverage.xml  extract_cmrr_physio.py  install_dcm4che_ubuntu.sh  pyproject.toml  requirements.txt  retrieve_cfmm_tar.py  retrieve_cfmm_tgz.py  run_tests.sh  sort_rules.py
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  PYPI_SETUP.md  copilot-instructions.md
.github/workflows/: build_conda_package.yml  publish-pypi.yml  push_container.yml  quality.yml  test.yml
cfmm2tar/: Dcm4cheUtils.py  DicomSorter.py  __init__.py  api.py  cli.py  dcm4che_utils.py  dicom_sorter.py  extract_cmrr_physio.py  retrieve_cfmm_tar.py  sort_rules.py  truststore.py  validate_bids.py
conda.recipe/: recipe.yaml
examples/: README.md  Snakefile_example  api_usage.py  skip_derived_example.py
share/dcm4che/etc/getscu/: store-tcs.properties
test/: Makefile  test_Dcm4cheUtils.py  test_argparse.sh
tests/: README.md  conftest.py  docker-compose.yml  test_api.py  test_dcm4che_utils.py  test_extract_cmrr_physio.py  test_gzip.py  test_skip_derived.py  test_truststore.py  test_validate_bids.py
