[project]
name = "cfmm2tar"
version = "0.0.3"
description = "Download a tarballed DICOM dataset from the CFMM DICOM server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "YingLi Lu", email = "yinglilu@gmail.com" },
    { name = "Ali Khan" },
]
maintainers = [
    { name = "isolove", email = "isolove@uwo.ca" },
]

dependencies = [
    "pydicom>=2.4.0",
]

[project.scripts]
cfmm2tar = "cfmm2tar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "numpy>=1.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
